optimizing the charts code on js file

--- a/index.html
+++ b/index.html
@@ -5,8 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Corona Virus</title>
-    <!-- <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.12.0/css/all.css"> -->
-    <link rel="stylesheet" href="../portfolio/css/bootstrap.min.css">
+    <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="stylesheet" href="css/style.min.css">
 </head>
 
@@ -110,7 +109,7 @@
     <!-- start of statistics -->
     <div id="statistics" class="statistics">
         <div class="container">
-            <h2 class="text-uppercase">Coronavirus disease outbreak situation</h2>
+            <h2 class="text-uppercase text-center">Coronavirus disease outbreak situation</h2>
             <div class="row">
                 <div class="col-sm-6 col-lg-3 info">
                     <h3>490,1444</h3>
@@ -193,9 +192,9 @@
             </div>
         </div>
         <!-- end of statistics -->
-        <script src="../portfolio/js/jquery.min.js"></script>
-        <script src="../portfolio/js/popper.js"></script>
-        <script src="../portfolio/js/bootstrap.min.js"></script>
+        <script src="js/jquery.min.js"></script>
+        <script src="js/popper.js"></script>
+        <script src="js/bootstrap.min.js"></script>
         <script src="js/chart.js"></script>
         <script src="js/main.js"></script>
         <script>
