adding logo + little retouch in icons in about virus section

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 <body>
     <nav class="navbar navbar-expand-lg">
-        <div class="container"> <a class="navbar-brand text-uppercase font-weight-bold" href="#">covid19</a>
+        <div class="container"> <a class="navbar-brand text-uppercase font-weight-bold" href="#"><img src="img/logo.png" alt=""> covid19</a>
             <button class="navbar-toggler border-red second-button" type="button" data-toggle="collapse"
                 data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
                 aria-label="Toggle navigation">
@@ -62,7 +62,7 @@
             <h2 class="text-uppercase text-center">latest updates about covid19</h2>
             <div class="row">
                 <div class="col-sm-6 col-lg-4">
-                    <div class="card"> <img src="img/news1jpg" alt="" class="card-img-top">
+                    <div class="card"> <img src="img/news/news1jpg" alt="" class="card-img-top">
                         <div class="card-body">
                             <p class="card-text"><small class="text-muted">Last updated March 25, 2020</small></p>
                             <h5 class="card-title text-capitalize">Can You Become Immune to the Coronavirus?</h5>
@@ -75,7 +75,7 @@
                     </div>
                 </div>
                 <div class="col-sm-6 col-lg-4">
-                    <div class="card"> <img src="img/news2.jpg" alt="" class="card-img-top">
+                    <div class="card"> <img src="img/news/news2.jpg" alt="" class="card-img-top">
                         <div class="card-body">
                             <p class="card-text"><small class="text-muted">Last updated March 24, 2020</small></p>
                             <h5 class="card-title text-capitalize">No end in sight: Death, pain and anxiety in Italy's
@@ -89,7 +89,7 @@
                     </div>
                 </div>
                 <div class="col-sm-6 col-lg-4">
-                    <div class="card"> <img src="img/news3.jpg" alt="" class="card-img-top">
+                    <div class="card"> <img src="img/news/news3.jpg" alt="" class="card-img-top">
                         <div class="card-body">
                             <p class="card-text"><small class="text-muted">Last updated 27 minutes ago</small></p>
                             <h5 class="card-title text-capitalize">US Senate approves $2 trillion coronavirus rescue
@@ -220,19 +220,19 @@
                 <h4 class="text-capitalize text-center">how coronavirus spreads?</h4>
                 <div class="row">
                     <div class="col-sm-6 text-center info">
-                        <img class="rounded-circle" src="img/g8378.png" alt="">
+                        <img class="rounded-circle" src="img/infection/g4398.png" alt="">
                         <p class="text-capitalize">air by cough or sneeze</p>
                     </div>
                     <div class="col-sm-6 text-center info">
-                        <img class="rounded-circle" src="img/g8494.png" alt="">
+                        <img class="rounded-circle" src="img/infection/g1662.png" alt="">
                         <p class="text-capitalize">personal contact</p>
                     </div>
                     <div class="col-sm-6 text-center info">
-                        <img class="rounded-circle" src="img/g8528.png" alt="">
+                        <img class="rounded-circle" src="img/infection/g1556.png" alt="">
                         <p class="text-capitalize">contaminated objects</p>
                     </div>
                     <div class="col-sm-6 text-center info">
-                        <img class="rounded-circle" src="img/g8881.png" alt="">
+                        <img class="rounded-circle" src="img/infection/g1406.png" alt="">
                         <p class="text-capitalize">animal contact</p>
                     </div>
                 </div>
