adding animation to logo + modifiying about-disease's section style

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 <body>
     <nav class="navbar navbar-expand-lg">
-        <div class="container"> <a class="navbar-brand text-uppercase font-weight-bold" href="#"><img src="img/logo.png" alt=""> covid19</a>
+        <div class="container"> <a class="navbar-brand text-uppercase" href="#"><img src="img/logo.png" alt=""> covid19</a>
             <button class="navbar-toggler border-red second-button" type="button" data-toggle="collapse"
                 data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
                 aria-label="Toggle navigation">
@@ -224,8 +224,8 @@
                         <p class="text-capitalize">air by cough or sneeze</p>
                     </div>
                     <div class="col-sm-6 text-center info">
-                        <img class="rounded-circle" src="img/infection/g1662.png" alt="">
-                        <p class="text-capitalize">personal contact</p>
+                        <img class="rounded-circle" id="animTest" src="img/infection/g1662.png" alt="">
+                        <p class="text-capitalize">human contact</p>
                     </div>
                     <div class="col-sm-6 text-center info">
                         <img class="rounded-circle" src="img/infection/g1556.png" alt="">
@@ -245,6 +245,7 @@
     <script src="js/popper.js"></script>
     <script src="js/bootstrap.min.js"></script>
     <script src="js/chart.js"></script>
+    <script src="js/anime.min.js"></script>
     <script src="js/main.js"></script>
     <script>
         $('.navbar-nav .nav-link').click(function () {
