adding prevention section

--- a/index.html
+++ b/index.html
@@ -11,7 +11,8 @@
 
 <body>
     <nav class="navbar navbar-expand-lg">
-        <div class="container"> <a class="navbar-brand text-uppercase" href="#"><img src="img/logo.png" alt=""> covid19</a>
+        <div class="container"> <a class="navbar-brand text-uppercase" href="#"><img src="img/logo.png" alt="">
+                covid19</a>
             <button class="navbar-toggler border-red second-button" type="button" data-toggle="collapse"
                 data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
                 aria-label="Toggle navigation">
@@ -62,7 +63,7 @@
             <h2 class="text-uppercase text-center">latest updates about covid19</h2>
             <div class="row">
                 <div class="col-sm-12 col-lg-4">
-                    <div class="card"> <img src="img/news/news1jpg" alt="" class="card-img-top">
+                    <div class="card shadow-lg"> <img src="img/news/news1.jpg" alt="" class="card-img-top">
                         <div class="card-body">
                             <p class="card-text"><small class="text-muted">Last updated March 25, 2020</small></p>
                             <h5 class="card-title text-capitalize">Can You Become Immune to the Coronavirus?</h5>
@@ -75,7 +76,7 @@
                     </div>
                 </div>
                 <div class="col-sm-12 col-lg-4">
-                    <div class="card"> <img src="img/news/news2.jpg" alt="" class="card-img-top">
+                    <div class="card shadow-lg"> <img src="img/news/news2.jpg" alt="" class="card-img-top">
                         <div class="card-body">
                             <p class="card-text"><small class="text-muted">Last updated March 24, 2020</small></p>
                             <h5 class="card-title text-capitalize">No end in sight: Death, pain and anxiety in Italy's
@@ -89,7 +90,7 @@
                     </div>
                 </div>
                 <div class="col-sm-12 col-lg-4">
-                    <div class="card"> <img src="img/news/news3.jpg" alt="" class="card-img-top">
+                    <div class="card shadow-lg"> <img src="img/news/news3.jpg" alt="" class="card-img-top">
                         <div class="card-body">
                             <p class="card-text"><small class="text-muted">Last updated 27 minutes ago</small></p>
                             <h5 class="card-title text-capitalize">US Senate approves $2 trillion coronavirus rescue
@@ -111,15 +112,15 @@
         <div class="container">
             <h2 class="text-uppercase text-center">Coronavirus disease outbreak situation</h2>
             <div class="row">
-                <div class="col-sm-6 col-lg-4 info">
+                <div class="col-sm-4 col-lg-4 info">
                     <h3 id="total_cases"></h3>
                     <p>Confirmed cases</p>
                 </div>
-                <div class="col-sm-6 col-lg-4 info">
+                <div class="col-sm-4 col-lg-4 info">
                     <h3 id="total_deaths"></h3>
                     <p>Confirmed deaths</p>
                 </div>
-                <div class="col-sm-6 col-lg-4 info">
+                <div class="col-sm-4 col-lg-4 info">
                     <h3 id="total_recovered"></h3>
                     <p>Recovered cases</p>
                 </div>
@@ -221,7 +222,7 @@
                         <p class="text-capitalize">air by cough or sneeze</p>
                     </div>
                     <div class="col-sm-6 text-center info">
-                        <img class="rounded-circle" id="animTest" src="img/infection/g1662.png" alt="">
+                        <img class="rounded-circle"  src="img/infection/g1662.png" alt="">
                         <p class="text-capitalize">human contact</p>
                     </div>
                     <div class="col-sm-6 text-center info">
@@ -237,6 +238,75 @@
         </div>
     </div>
     <!-- end of about disease section -->
+
+    <!-- start of prevention section -->
+    <div class="prevention" id="prevention">
+        <div class="container">
+            <h2 class="text-center">Basic protective measures against the new coronavirus</h2>
+            <p>Stay aware of the latest information on the COVID-19 outbreak, through your national and local public
+                health authority. Most people who become infected experience mild illness and recover,
+                but it can be more severe for others. Take care of your health and protect others by doing the
+                following:</p>
+            <div class="embed-responsive embed-responsive-21by9">
+                <iframe class="embed-responsive embed-responsive-16by9" src="https://www.youtube.com/embed/bPITHEiFWLc"
+                    frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
+                    allowfullscreen></iframe>
+            </div>
+            <div class="row icons">
+                <div class="col-sm-4 col-lg-4 text-center">
+                    <img class="rounded-circle" src="img/prevention/g3538.png" alt="">
+                    <p class="text-uppercase">wash your hands often</p>
+                </div>
+                <div class="col-sm-4 col-lg-4 text-center">
+                    <img class="rounded-circle" src="img/prevention/g5265.png" alt="">
+                    <p class="text-uppercase">wear a facemask</p>
+                </div>
+                <div class="col-sm-4 col-lg-4 text-center">
+                    <img class="rounded-circle" src="img/prevention/g5166.png" alt="">
+                    <p class="text-uppercase">avoid direct contact with people</p>
+                </div>
+            </div>
+            <div class="advices">
+                <div class="info">
+                    <h3>Wash your hands frequently</h3>
+                    <p>Regularly and thoroughly clean your hands with an alcohol-based hand rub or wash them with soap
+                        and water.</p>
+                    <p><strong>Why?</strong> Washing your hands with soap and water or using alcohol-based hand rub
+                        kills viruses that may be on your hands.</p>
+                </div>
+
+                <div class="info">
+                    <h3>Maintain social distancing</h3>
+                    <p>Maintain at least 1 metre (3 feet) distance between yourself and anyone who is coughing or
+                        sneezing.
+                    </p>
+                    <p><strong>Why?</strong> When someone coughs or sneezes they spray small liquid droplets from their
+                        nose
+                        or mouth which may contain virus. If you are too close, you can breathe in the droplets,
+                        including
+                        the COVID-19 virus if the person coughing has the disease.</p>
+                </div>
+
+                <div class="info">
+                    <h3>Avoid touching eyes, nose and mouth</h3>
+                    <p><strong>Why?</strong> Hands touch many surfaces and can pick up viruses. Once contaminated, hands can transfer the virus to your eyes, nose or mouth. From there, the virus can enter your body and can make you sick.</p>
+                </div>
+
+                <div class="info">
+                    <h3>Practice respiratory hygiene</h3>
+                    <p>Make sure you, and the people around you, follow good respiratory hygiene. This means covering your mouth and nose with your bent elbow or tissue when you cough or sneeze. Then dispose of the used tissue immediately.</p>
+                    <p><strong>Why?</strong> Droplets spread virus. By following good respiratory hygiene you protect the people around you from viruses such as cold, flu and COVID-19.</p>
+                </div>
+
+                <div class="info">
+                    <h3>If you have fever, cough and difficulty breathing, seek medical care early</h3>
+                    <p>Stay home if you feel unwell. If you have a fever, cough and difficulty breathing, seek medical attention and call in advance. Follow the directions of your local health authority.</p>
+                    <p><strong>Why?</strong> National and local authorities will have the most up to date information on the situation in your area. Calling in advance will allow your health care provider to quickly direct you to the right health facility. This will also protect you and help prevent spread of viruses and other infections.</p>
+                </div>
+            </div>
+        </div>
+    </div>
+    <!-- end of prevention section -->
 
     <script src="js/jquery.min.js"></script>
     <script src="js/popper.js"></script>
