adding symptoms section

--- a/index.html
+++ b/index.html
@@ -239,10 +239,41 @@
     </div>
     <!-- end of about disease section -->
 
+    <!-- end start of symptoms section -->
+    <div class="symptoms">
+        <div class="container">
+            <h5 class="text-center text-uppercase">basic symptoms</h5>
+            <h4 class="text-center text-capitalize">coronavirus symptoms</h4>
+            <div class="row">
+                <div class="col-sm-12 col-md-12 col-lg-6 ">
+                    <img src="img/g3863.png" alt="">
+                </div>
+                <div class="col-sm-12 col-md-12 col-lg-6 info">
+                    <p>The following symptoms may appear 2-14 days after exposure.</p>
+                    <p class="text-capitalize">The common symptoms are:</p>
+                    <ol>
+                        <li>Cough</li>
+                        <li>Fever</li>
+                        <li>Tiredness</li>
+                        <li>Difficulty breathing (severe cases)</li>
+                    </ol>
+                    <p class="text-capitalize">the rare Symptoms are:</p>
+                    <ol>
+                        <li>Aches and pains</li>
+                        <li>nasal congestion</li>
+                        <li>runny nose</li>
+                        <li>sore throat or diarrhea</li>
+                    </ol>
+                </div>
+            </div>
+        </div>
+    </div>
+    <!-- start of symptoms section -->
+
     <!-- start of prevention section -->
     <div class="prevention" id="prevention">
         <div class="container">
-            <h2 class="text-center">Basic protective measures against the new coronavirus</h2>
+            <h2 class="text-center text-uppercase">Basic protective measures against the new coronavirus</h2>
             <p>Stay aware of the latest information on the COVID-19 outbreak, through your national and local public
                 health authority. Most people who become infected experience mild illness and recover,
                 but it can be more severe for others. Take care of your health and protect others by doing the
@@ -298,11 +329,6 @@
                     <p><strong>Why?</strong> Droplets spread virus. By following good respiratory hygiene you protect the people around you from viruses such as cold, flu and COVID-19.</p>
                 </div>
 
-                <div class="info">
-                    <h3>If you have fever, cough and difficulty breathing, seek medical care early</h3>
-                    <p>Stay home if you feel unwell. If you have a fever, cough and difficulty breathing, seek medical attention and call in advance. Follow the directions of your local health authority.</p>
-                    <p><strong>Why?</strong> National and local authorities will have the most up to date information on the situation in your area. Calling in advance will allow your health care provider to quickly direct you to the right health facility. This will also protect you and help prevent spread of viruses and other infections.</p>
-                </div>
             </div>
         </div>
     </div>
