--- a/index.html
+++ b/index.html
@@ -43,17 +43,17 @@
                 <div class="overlay"></div>
                 <div class="carousel-item carousel-one active">
                     <div class="carousel-caption d-md-block">
-                        <h5>the new corona virus</h5>
+                        <h5>Lorem ipsum dolor sit</h5>
                     </div>
                 </div>
                 <div class="carousel-item carousel-two">
                     <div class="carousel-caption d-md-block">
-                        <h5>the new corona test</h5>
+                        <h5>Lorem ipsum dolor sit</h5>
                     </div>
                 </div>
                 <div class="carousel-item carousel-three">
                     <div class="carousel-caption d-md-block">
-                        <h5>the new corona testing</h5>
+                        <h5>Lorem ipsum dolor sit</h5>
                     </div>
                 </div>
             </div>
