making some updates in api & coronavirus disease outbreak situation section

--- a/test.html
+++ b/test.html
@@ -134,7 +134,7 @@
                     <p>Recovered cases</p>
                 </div>
             </div>
-            <!-- <p class="text-capitalize" id="last_update"></p> -->
+            <p class="text-capitalize" id="last_update"></p>
             <div class="row">
                 <div class="col-sm-6">
                     <div class="card bg-light mb-3">
@@ -144,13 +144,13 @@
                             <h6 class="card-title text-center">Currently Infected Patients</h6>
                             <div class="row">
                                 <div class="col">
-                                    <p class="card-text text-center"><span id="firstS"></span>
-                                        <small id="good-cases"></small></p>
+                                    <p class="card-text text-center"><span id="firstS">337,693</span>
+                                        <small>(95%)</small></p>
                                     <p class="card-text text-center">in Mild Condition</p>
                                 </div>
                                 <div class="col">
-                                    <p class="card-text text-center"><span id="secondS"></span>
-                                        <small id="serious-cases"></small></p>
+                                    <p class="card-text text-center"><span id="secondS">18,171</span>
+                                        <small>(5%)</small></p>
                                     <p class="card-text text-center">Serious or Critical</p>
                                 </div>
                             </div>
@@ -159,19 +159,19 @@
                 </div>
                 <div class="col-sm-6">
                     <div class="card bg-light mb-3">
-                        <div class="card-header text-uppercase text-center">closed cases</div>
+                        <div class="card-header text-uppercase text-center">closes cases</div>
                         <div class="card-body">
-                            <h5 class="card-title text-center" id="closed-cases"></h5>
+                            <h5 class="card-title text-center">143,509</h5>
                             <h6 class="card-title text-center">Cases which had an outcome</h6>
                             <div class="row">
                                 <div class="col">
-                                    <p class="card-text text-center"><span id="thirdS"></span>
-                                        <small id="recov-pers"></small></p>
+                                    <p class="card-text text-center"><span id="thirdS">121,198</span>
+                                        <small>(84%)</small></p>
                                     <p class="card-text text-center">Recovered</p>
                                 </div>
                                 <div class="col">
-                                    <p class="card-text text-center"><span id="fourthS"></span>
-                                        <small id="deathss-pers"></small></p>
+                                    <p class="card-text text-center"><span id="fourthS">22,311</span>
+                                        <small>(16%)</small></p>
                                     <p class="card-text text-center">Deaths</p>
                                 </div>
                             </div>
